# studentprognose

./: .gitattributes  .gitignore  CLAUDE.md  FAQ.md  LICENSE  Makefile  README.md  cli.py  configuration.yaml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  package-smoke-test.yml  publish-windows-exe.yml  pypi-publish.yml  unit.yml
archive/: append_studentcount_and_compute_errors.py  apply_weights_on_different_year.py  calculate_ensemble_weights.py  transforms_unused.py
archive/higher_years/: fill_in_ratiofile.py  higher_years.py
configuration/: configuration.json
data/: data_dictionary.xlsx
data/input/: student_count_first-years.xlsx  student_count_first-years_inclusief_pre-master_DEMO.xlsx  vooraanmeldingen_individueel.csv  vooraanmeldingen_individueel_DEMO.csv
data/input_raw/: README.md  afstanden.xlsx  individuele_aanmelddata.csv  oktober_bestand.xlsx
data/metadata/: data_dictionary.csv  data_dictionary.xlsx
data/output/: blank.xlsx
doc/: PIPELINE.md  TECHNICAL_README.md
doc/ActivityDiagram/: activity_diagram_plantuml.txt
doc/ClassDiagram/: class_diagram_plantuml.txt
doc/ClassDiagramSimple/: class_diagram_simple_plantuml.txt
doc/SequenceDiagram/: sequence_diagram_plantuml.txt
doc/presentation/: HOlink_studentprognose.pptx  README.md  package.json  slides.md
docs/: aan-de-slag.md  begrippen.md  configuratie-referentie.md  configuratie.md  gevorderd-gebruik.md  gui.md  index.md  installeren.md  je-data-voorbereiden.md  output-begrijpen.md  presentatie.md  snelstart.md  validatie.md
docs/api/: index.md  models.md  strategies.md
docs/javascripts/: iframe-theme.js
docs/methodologie/: benchmarks.md  ensemble.md  index.md  individueel.md  ratio-model.md  sarima.md  xgboost.md
docs/stylesheets/: extra.css
gui/: DESIGN.md  __init__.py  __main__.py  app.py  benchmark_io.py  config_io.py  data_upload.py  demodata.py  errors.py  filtering_io.py  nav.py  process.py  results_io.py  state.py  theme.py  tracks.py  viz.py
gui/components/: __init__.py  dirty_guard.py  file_picker.py  layout.py  log_stream.py  pipeline_rail.py  progress_card.py  states.py  train_test_viz.py
gui/pages/: __init__.py  benchmark.py  config_page.py  filtering.py  home.py  methodology.py  nav_prototypes.py  output.py  run.py  wizard.py
notebooks/: 00_overzicht.ipynb  01_data_voorbereiden.ipynb  02_sarima.ipynb  03_xgboost.ipynb  04_ratio_model.ipynb  05_ensemble.ipynb  06_output_interpreteren.ipynb  07_implementatie.ipynb  PVA.md  README.md  _build_notebooks.py  _helpers.py  implementatie.ipynb
presentations/onboarding/: slides.md
scripts/: append_studentcount_and_compute_errors.py  ci_subset.py  create_test_subset.py  generate_demo_data.py  generate_docs_plots.py  generate_realistic_data.py  helper.py  load_data.py  main.py  test_package.sh
scripts/dataholder/: cumulative.py  helpermethods.py  individual.py  superclass.py
scripts/higher_years/: higher_years_othermethod.py
scripts/models/: baseline.py  cumulative.py  ensemble.py  higher_years.py  individual.py  multi-year.py
scripts/prediction_methods/: bayesian_models.py
scripts/standalone/: add_weeks_where_preapplicants_are_zero.py  append_studentcount_and_compute_errors.py  apply_weights_on_different_year.py  calculate_ensemble_weights.py  clear_output_dir.py  evaluation.py  find_optimal_sarima_parameters.py  rowbind_and_reformat_studielink_data.py  update_total_file.py
scripts/utils/: clustering.py  helper.py  load_data.py  nf_distrubtion.py  postprocess.py
src/: cli.py  config.py  main.py
src/data/: add_zero_weeks.py  etl.py  loader.py  s01_etl.py  s02_loader.py  s04_ci_subset.py  transforms.py
src/models/: importance.py  ratio.py  s05_xgboost_classifier.py  s07_sarima.py  sarima.py  xgboost_classifier.py  xgboost_regressor.py
src/output/: dashboard.py  postprocessor.py  s10_postprocessor.py  s11_dashboard.py
src/strategies/: __init__.py  base.py  combined.py  cumulative.py  individual.py
src/studentprognose/: __init__.py  cli.py  config.py  init.py  main.py  tuning_runner.py
tests/gui/: test_benchmark_io.py  test_config_io.py  test_demodata.py  test_errors.py  test_filtering_io.py  test_import.py  test_nav.py  test_process.py  test_results_io.py  test_state.py
tests/studentprognose/: test_add_applicant_data.py  test_api.py  test_baseline.py  test_benchmark.py  test_cli.py  test_dashboard.py  test_etl_telbestanden.py  test_evaluation.py  test_excluded_data_points.py  test_feature_engineering.py  test_forecasters.py  test_institution_filter.py  test_nf_validation.py  test_parallel.py  (+11 more)
(+873 files in other folders)
