[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "studentprognose"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "pillow>=12.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
]

[project.scripts]
studentprognose = "src.main:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
exclude = ["data/"]
