[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "studentprognose"
dynamic = ["version"]
description = "Studentprognose tool voor het voorspellen van eerstejaars instroom in het hoger onderwijs"
readme = "README.md"
# Vastgezet op Python 3.11.x voor de UvA-implementatie. De UvA draait
# deze pipeline op Microsoft Fabric Runtime 1.3, dat Python 3.11 levert.
# De main-branch staat op 3.12; deze branch loopt bewust een minor achter
# zodat de code zonder runtime-upgrade op Fabric kan draaien.
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
    {name = "CEDA", email = "info@cedanl.nl"},
]
keywords = ["prognose", "instroom", "hoger-onderwijs", "machine-learning", "onderwijs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
]
dependencies = [
    "matplotlib>=3.10.0",
    "pillow>=12.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.0",
    "statsforecast>=2.0.3",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
    "plotly>=6.7.0",
]

[project.urls]
Homepage = "https://github.com/cedanl/studentprognose"
Repository = "https://github.com/cedanl/studentprognose"
Issues = "https://github.com/cedanl/studentprognose/issues"

[project.scripts]
studentprognose = "studentprognose.main:cli"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pre-commit>=4.1.0",
    "pytest>=9.0.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/studentprognose"]

[tool.hatch.build.targets.sdist]
exclude = ["/data/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
